1. folder icons are now customisable 2. "Group" folders make their appearance - just don't try to create them yet :-) 3. several minor compilation/runtime fixes

--- a/TODO
+++ b/TODO
@@ -294,4 +294,4 @@ $Id$
 5	KB	check mail now in File... menu
 5	KB	check "Unread" status flag
 
-vi: set si tw=80:
+vi: set si ts=8 sw=8 noet nolist tw=80:
