--- a/TODO
+++ b/TODO
@@ -44,7 +44,11 @@ $Id$
 *********************************************************************
 
 9	KB	Write ASMailFolder API for subscription management.
+		.... working on it right now
 
+9		MEvents need handlers with different priorities --
+		needed to get Filtering and ASMailFolder to work
+		properly 
 
 6	VZ	Could you please add a file-browse button/dialog to
 		the folder selection dialog and modify its return
@@ -53,6 +57,9 @@ $Id$
 		I'll then add support for that to the Copy/Move
 		Messages functions. (KB)
 6	KB	implement temporary/fake Profile mode
+5	VZ?	Add DND for messages between folders
+5	?	Add DND for MIME content from composeView/messageView
+                to file managers
 2	KB	add sub-directories support for different icon sets to 
 		wxIconManager, e.g. small/large style
 		More icons needed: INBOX, PopServer, IMAPServer,
