1. compilation fixes for modules stuff 2. generic support for ADB import - only the code to really import data    is still lacking

--- a/TODO
+++ b/TODO
@@ -37,6 +37,8 @@ $Id$
 		dialog, can't TAB to the buttons from the notebook
 		page
 
+2	VZ	default value for "custom header" comboboxes wrong?
+
 *********************************************************************
 *** PROJECTS
 *********************************************************************
