--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,6 @@
 (next release) on (date of next release)
-
+06.07.99 KB: fixed New Mail dialog showing empty lines 
+06.07.99 KB: icons in messages appear correctly now
 05.07.99 VZ: "folder already exists" bug when creating POP3 folder fixed
 04.07.99 VZ: folder icons can now be customized
 03.07.99 VZ: support for adding custom headers from compose view
