--- a/TODO
+++ b/TODO
@@ -15,6 +15,8 @@ $Id$
 		later say that there are M-N new messages :-(
 9		changing properties for IMAP folder (auto-collect)
 		occasionally dumps core on [OK] click
+9		Problems with python support?
+9		Mahogany no longer reacts to exit request
 7 gtk	VZ?	message boxes have broken icons under wxGTK
 7 gtk		Mahogany occasionally doesn't terminate but remains in
 		gtk event loop without any open windows.
@@ -24,6 +26,9 @@ $Id$
 		now
 4		fix MProfile.py/Profile.py name confusion
 6	VZ	All Folder create dialog pages have no HelpIDs set.
+6	VY	folder properties assert when trying to create a
+		subfolder under INBOX
+6	VZ	icon selection dialog broken/ugly under wxGTK
 5	KB	for NNTP only count unread/new messages
 5	KB	make MailFolder timer react to options change
 5	KB	(optionally, but on by default) expunge deleted messages when
@@ -107,16 +112,12 @@ $Id$
 		page probably?
 2		different icon for activity log frame
 2	VZ?	make activity log frame appear on demand only
-<<<<<<< TODO
 2		fix es.po - many little errors
+2	KB	optionally activate tearoff menus
 
 from 32bitsonline review:
-
 4		Trash folder, move to trash instead/alternative of of delete
 4		Message menu popup for folderlistctrl
-=======
-
->>>>>>> 1.272
 *********************************************************************
 *** TESTS
 *********************************************************************
